- New object: Sphinx (rct2.scenery_large.sspx)
- New object: Pyramid (rct2.scenery_large.spyr)
- New object: Wooden Post Wall (couger.scenery_wall.acwwf32)
- New object: Wooden Post Wall (couger.scenery_wall.acww33)
- New object: Dinosaur (rct2.scenery_large.sdn1)
- New object: Dinosaur (rct2.scenery_large.sdn2)
- New object: Dinosaur (rct2.scenery_large.sdn3)
- Fixed object: Incense Cedar Tree (rct2.scenery_small.tic)
- Fixed object: Lawson Cypress Tree (rct2.scenery_small.tlc)
- Fixed object: Monterey Cypress Tree (rct2.scenery_small.tmc)
- Fixed object: Arizona Cypress Tree (rct2.scenery_small.tac)
- Fixed object: Bush (rct2.scenery_small.tsh0)
- Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
- Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
- Fixed object: Logs (rct2.scenery_small.tml)
- Fixed object: Barrel (fidwell.scenery_small.tbr3)
- Fixed object: Barrel (fidwell.scenery_small.tbr4)
- Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
- Updated object: Roman Colosseum (rct2.scenery_large.scol)
- Updated object: Roman Column (rct2.scenery_small.trc)
- Updated object: Colonnade (rct2.scenery_large.scln)
- Removed: Some redundant custom objects

2.0 (2023-02-26)
------------------------------------------------------------------------
- Fixed: Scenery groups did not properly override old DAT versions.
- New object: Candy Tree (rct2.scenery_small.tas1)
- New object: Candy Tree (rct2.scenery_small.tas2)
- New object: Candy Tree (rct2.scenery_small.tas3)
- New object: Candy (rct2.scenery_small.tas4)
- New object: Toadstool (rct2.scenery_small.tms1)
- New object: Red Meteor Crater Corner (rct2tt.scenery_large.rdmeto01)
- New object: Red Meteor Crater Corner (rct2tt.scenery_large.rdmeto02)
- New object: Red Meteor Crater Wall (rct2tt.scenery_small.rdmeto03)
- New object: Red Meteor Crater Inverted Corner (rct2tt.scenery_small.rdmeto04)
- New object: Meteor Crater Corner (rct2tt.scenery_large.metoan01)