@@ -175,6 +175,7 @@
             "rct2ww.scenery_small.1x1atree",
             "$DAT:0CBD0501|IR1X1ATC",
             "rct2ww.scenery_small.1x1atre2",
+            "fidwell.scenery_small.1x1atre2",
             "rct2ww.scenery_large.3x3atre1",
             "rct2ww.scenery_large.3x3atre2",
             "rct2ww.scenery_large.3x3atre3",
